--- a/habit_hero/pubspec.yaml
+++ b/habit_hero/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=2.18.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -16,10 +16,9 @@ dependencies:
   provider: ^6.0.6
   fl_chart: ^1.1.1
   shared_preferences: ^2.1.1
-  flutter_slidable: ^4.0.3
+  flutter_slidable: ^4.0.0
   google_fonts: ^5.0.0
-
-
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
